# Hybricks-Splatflow

./: .gitignore  README.md  pyproject.toml
src/splatflow/: __init__.py  sharp_frames_runner.py
src/splatflow/backend/: __init__.py  downloads.py  errors.py  paths.py  pipeline.py  process.py  schema.py  settings.py  toolchain.py  workspace.py
src/splatflow/backend/tools/: colmap.py  lichtfeld.py  sharp_frames.py
src/splatflow/frontend/: app.py
tests/: test_command_builders.py  test_pipeline_smoke.py  test_schema.py
